--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <button id="rock">Rock</button>
   <button id="paper">Paper</button>
   <button id="scissors">Scissors</button>
+
+  <div class="result"></div>
 </body>
 
 </html>
