Add score counter to html

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <button id="paper">Paper</button>
   <button id="scissors">Scissors</button>
 
+  <div class="score">Player <span class="player">0</span> - <span class="computer">0</span> Computer</div>
   <div class="result"></div>
 </body>
 
